--- a/tools/colab/shakespeare_with_tpu_and_keras.ipynb
+++ b/tools/colab/shakespeare_with_tpu_and_keras.ipynb
@@ -3,11 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Predict Shakespeare with Cloud TPUs and Keras",
+      "name": "Shakespeare in 5 minutes with Cloud TPUs and Keras",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,75 +17,18 @@
   "cells": [
     {
       "metadata": {
-        "id": "bfJp0Q0M1npS",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "##### Copyright 2018 The TensorFlow Authors."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "rxkNIKFM1vWx",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "#@title Licensed under the Apache License, Version 2.0 (the \"License\"); { display-mode: \"form\" }\n",
-        "# you may not use this file except in compliance with the License.\n",
-        "# You may obtain a copy of the License at\n",
-        "#\n",
-        "# https://www.apache.org/licenses/LICENSE-2.0\n",
-        "#\n",
-        "# Unless required by applicable law or agreed to in writing, software\n",
-        "# distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-        "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-        "# See the License for the specific language governing permissions and\n",
-        "# limitations under the License."
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "edfbxDDh2AEs",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "# Predict Shakespeare with Cloud TPUs and Keras"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "wYp6XVQU2POn",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
-        " <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/tpu/blob/master/tools/colab/shakespeare_with_tpu_and_keras.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
-        "  </td>\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/tpu/blob/master/tools/colab/shakespeare_with_tpu_and_keras.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View source on GitHub</a>\n",
-        "  </td>\n",
-        "</table>"
-      ]
-    },
-    {
-      "metadata": {
         "id": "xzpUtDMqmA-x",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "This example uses [tf.keras](https://www.tensorflow.org/guide/keras) to build a *language model* and train it on a [Google Cloud TPU](https://cloud.google.com/tpu/). This language model predicts the next character of text given the text so far. The trained model can generate new snippets of text that read in a similar style to the text training data.\n",
+        "# Shakespeare in 5 minutes with Cloud TPUs and Keras\n",
         "\n",
-        "We'll train the model on the combined works of William Shakespeare, then use it to compose a play in the style of *The Great Bard*:\n",
+        "This notebook demonstrates using Cloud TPUs to build a _language model_: a model that predicts the next character of text given the text so far.  Once our model has been trained we can sample from it to generate new text that looks like the text it was trained on.  In this case we're going to train our network using the combined works of Shakespeare, creating a play-generating robot.\n",
         "\n",
+        "Our network outputs something Shakespeare-esque:\n",
+        "\n",
+        "___\n",
         "<blockquote>\n",
         "Loves that led me no dumbs lack her Berjoy's face with her to-day.  \n",
         "The spirits roar'd; which shames which within his powers  \n",
@@ -100,20 +42,9 @@
         "But he perforces seen in her eyes so fast;  \n",
         "And _  \n",
         "</blockquote>\n",
+        "___\n",
         "\n",
-        "Note: To enable TPUs on Google Colab, select *Runtime > Change runtime type*, and set *Hardware acceleration* to TPU."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "KRQ6Fjra3Ruq",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "## Download data\n",
-        "\n",
-        "Download *The Complete Works of William Shakespeare* as a single text file from [Project Gutenberg](https://www.gutenberg.org/). We'll use snippets from this file as the *training data* for the model. The *target* snippet is offset by one character."
+        "Let's get started on generating our own Shakespeare!  We'll start off with our data generator.  The training data to our model will be snippets from our text file: the _target_ snippet is offset by one character."
       ]
     },
     {
@@ -130,7 +61,7 @@
       "source": [
         "!wget --show-progress --continue -O /content/shakespeare.txt http://www.gutenberg.org/files/100/100-0.txt"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,16 +72,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "AbL6cqCl7hnt",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "### Build the data generator"
       ]
     },
     {
@@ -211,7 +132,7 @@
         "\n",
         "six.next(training_generator(seq_len=10, batch_size=1))"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,12 +173,13 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Build the model\n",
+        "## Building our model\n",
         "\n",
-        "The model is defined as a two-layer, forward-LSTM—with two changes from the `tf.keras` standard LSTM definition:\n",
+        "Now that we have some data, we can define our model.  We use a simple 2 layer, forward LSTM for this notebook.\n",
         "\n",
-        "1. Define the input `shape` of our model which satisfies the [XLA compiler](https://www.tensorflow.org/performance/xla/)'s static shape requirement.\n",
-        "2. Use `tf.train.Optimizer` instead of a standard Keras optimizer (Keras optimizer support is still experimental)."
+        "We make 2 changes from a standard LSTM definition in Keras.  First, we define the `shape` for the input of our model.  This allows TF to infer the shape of the model and satisfy the XLA compiler's static shape requirement.\n",
+        "\n",
+        "Second, we use a `tf.train.Optimizer` instead of a standard Keras optimizer (Keras optimizer support is still experimental.)"
       ]
     },
     {
@@ -296,9 +218,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Train the model\n",
+        "## Training our model\n",
         "\n",
-        "The `tf.contrib.tpu.keras_to_tpu_model` function converts a `tf.keras` model to an equivalent TPU version. We then use the standard Keras methods to train: `fit`, `predict`, and `evaluate`."
+        "The `tf.contrib.tpu.keras_to_tpu_model` function converts our Keras model to an equivalent TPU version.  We can then use our standard `fit`, `predict`, `evaluate` Keras methods to train."
       ]
     },
     {
@@ -329,7 +251,7 @@
         ")\n",
         "tpu_model.save_weights('/tmp/bard.h5', overwrite=True)"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,10 +316,11 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Make predictions with the model\n",
+        "## Running predictions with our model\n",
         "\n",
-        "Use the trained model to make predictions and generate your own Shakespeare-esque play.\n",
-        "Start the model off with a *seed* sentence, then generate 250 characters from it. We'll make five predictions from the initial seed."
+        "We've trained our model, now we can run predictions through it to generate \"Shakespeare\"!  We provide a seed sentence to get our model started, and then sample 250 characters from it.\n",
+        "\n",
+        "We'll make 5 predictions from the initial seed."
       ]
     },
     {
@@ -454,7 +377,7 @@
         "  print()\n",
         "  assert len(generated) == PREDICT_LEN, 'Generated text too short'"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
